konga/second-ingress-konga-with-tls.yaml .yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: second-test-kong
  annotations:
    cert-manager.io/cluster-issuer: "syndeno-issuer"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: second-try-konga.plt.aw.syndeno.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: konga
                port:
                  number: 80
  tls:
    - hosts:
        - second-try-konga.plt.aw.syndeno.net
      secretName: second-try-konga.plt.aw.syndeno.net
